--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- base -->
+    <link rel="stylesheet" href="./css/base/base.css" />
+    <link rel="stylesheet" href="./css/base/layout.css" />
+    <!-- 3d-party -->
+    <!-- components -->
+    <!-- pages -->
     <title>Coming Soon</title>
   </head>
   <body>
-    CONTENT
+    <section>HERO</section>
+
+    <section>MAIN CONTENT</section>
+
+    <footer>FOOTER</footer>
   </body>
 </html>
