--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
     <!-- 3d-party -->
     <!-- components -->
     <!-- pages -->
+    <link rel="stylesheet" href="./css/pages/home.css" />
     <title>Coming Soon</title>
   </head>
   <body>
-    <section>HERO</section>
+    <section class="container bg-blue">
+      <div class="short-row">HERO content</div>
+    </section>
+    <section class="container">
+      <div class="row">
+        <div class="left">LEFT</div>
+        <div class="right">RIGHT</div>
+      </div>
+    </section>
 
-    <section>MAIN CONTENT</section>
+    <footer class="container bg-blue">
+      <div class="row">socials</div>
 
-    <footer>FOOTER</footer>
+      <div class="short-row">bottom content</div>
+    </footer>
   </body>
 </html>
