responsive flex design

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- 3d-party -->
     <!-- components -->
     <!-- pages -->
+    <link rel="stylesheet" href="./css/pages/home.css" />
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link
@@ -41,12 +42,30 @@
   </head>
   <body>
     <section class="container bg-blue">
-      <div class="short-row">HERO content</div>
+      <div class="short-row hero">
+        <img class="logo" src="./pic/logo.png" alt="logo" />
+        <h1 class="main-title">Coming soon</h1>
+        <p class="main-description">
+          An awesome new company for web resources is coming very soon. Enter
+          your email to request an early invitation!
+        </p>
+        <div class="clock">CLOCK</div>
+      </div>
     </section>
+
     <section class="container">
       <div class="row">
-        <div class="left">LEFT</div>
-        <div class="right">RIGHT</div>
+        <div class="left">
+          LEFT Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+          sint labore doloremque voluptatem vitae cupiditate officia nam
+          accusantium ab magni.
+        </div>
+
+        <div class="right">
+          RIGHT Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias
+          praesentium officia repellat, iusto nulla atque natus molestiae modi
+          quisquam! Soluta?
+        </div>
       </div>
     </section>
 
