main heading and descriptions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- 3d-party -->
     <!-- components -->
     <!-- pages -->
+    <link rel="stylesheet" href="./css/pages/home.css" />
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link
@@ -41,12 +42,38 @@
   </head>
   <body>
     <section class="container bg-blue">
-      <div class="short-row">HERO content</div>
+      <div class="short-row hero">
+        <img class="logo" src="./pic/logo.png" alt="logo" />
+        <h1 class="main-title">Coming soon</h1>
+        <p class="main-description">
+          An awesome new company for web resources is coming very soon. Enter
+          your email to request an early invitation!
+        </p>
+        <div class="clock">CLOCK</div>
+      </div>
     </section>
+
     <section class="container">
       <div class="row">
-        <div class="left">LEFT</div>
-        <div class="right">RIGHT</div>
+        <div class="column">
+          <h2 class="section-title">About startup</h2>
+          <p class="section-description">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta
+            laudantium consectetur suscipit recusandae! Placeat,
+            <a href="#">Matrox</a> eius esse recusandae ullam quis voluptatem ad
+            quibusdam deserunt autem. Fugiat doloribus quidem nam sunt.
+          </p>
+        </div>
+
+        <div class="column right">
+          <h2 class="section-title">Have any questions?</h2>
+          <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+            libero dolore error, natus quisquam repellendus cum aliquid illum
+            eius <a href="mailto:name@e-mail.com">name@e-mail.com</a> minus quas
+            ratione ullam porro temporibus aperiam.
+          </p>
+        </div>
       </div>
     </section>
 
