--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- base -->
-    <link rel="stylesheet" href="./css/base/base.css" />
-    <link rel="stylesheet" href="./css/base/layout.css" />
-    <!-- 3d-party -->
-    <!-- components -->
-    <!-- pages -->
-    <link rel="stylesheet" href="./css/pages/home.css" />
-
+    <title>Coming soon</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link
       rel="apple-touch-icon"
@@ -38,62 +31,57 @@
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Coming Soon</title>
+    <!-- base -->
+    <link rel="stylesheet" href="./css/base/base.css" />
+    <link rel="stylesheet" href="./css/base/layout.css" />
+    <!-- 3rd-party -->
+    <link rel="stylesheet" href="./css/3rd-party/font-awesome.min.css" />
+    <!-- components -->
+    <!-- pages -->
+    <link rel="stylesheet" href="./css/pages/home.css" />
   </head>
+
   <body>
     <section class="container bg-blue">
       <div class="short-row hero">
-        <img class="logo" src="./pic/logo.png" alt="logo" />
+        <img class="logo" src="./pic/logo.png" alt="Logo" />
         <h1 class="main-title">Coming soon</h1>
         <p class="main-description">
           An awesome new company for web resources is coming very soon. Enter
           your email to request an early invitation!
         </p>
-        <div class="clock">CLOCK</div>
       </div>
     </section>
 
     <section class="container">
       <div class="row">
-
         <div class="column">
           <h2 class="section-title">About startup</h2>
           <p class="section-description">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta
-            laudantium consectetur suscipit recusandae! Placeat,
-            <a href="#">Matrox</a> eius esse recusandae ullam quis voluptatem ad
-            quibusdam deserunt autem. Fugiat doloribus quidem nam sunt.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut sunt
+            <a href="#">Matrox</a> perferendis corrupti, sequi tenetur voluptas
+            quia sapiente at! Dicta, aperiam accusantium. Doloremque aut
+            temporibus dignissimos expedita veritatis, unde nam?
           </p>
         </div>
-
         <div class="column right">
-          <h2 class="section-title">Have any questions?</h2>
+          <h2 class="section-title">Have any question?</h2>
           <p class="section-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
-            libero dolore error, natus quisquam repellendus cum aliquid illum
-            eius <a href="mailto:name@e-mail.com">name@e-mail.com</a> minus quas
-            ratione ullam porro temporibus aperiam.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat
+            dicta officia perferendis facilis
+            <a href="mailto:vardenis@pastenis.lt">vardenis@pastenis.lt</a>, quas
+            error sit consectetur aliquid iusto. Laborum eveniet laboriosam
+            veniam facere provident ipsum!
           </p>
-
-        <div class="left">
-          LEFT Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-          sint labore doloremque voluptatem vitae cupiditate officia nam
-          accusantium ab magni.
-        </div>
-
-        <div class="right">
-          RIGHT Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias
-          praesentium officia repellat, iusto nulla atque natus molestiae modi
-          quisquam! Soluta?
-
         </div>
       </div>
     </section>
 
     <footer class="container bg-blue">
-      <div class="row">socials</div>
-
-      <div class="short-row">bottom content</div>
+      <div class="row">
+        <i class="fa fa-globe"></i>
+      </div>
+      <div class="short-row">BOTTOM TEXT</div>
     </footer>
   </body>
 </html>
