--- a/index.html
+++ b/index.html
@@ -69,19 +69,25 @@
           <p class="section-description">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat
             dicta officia perferendis facilis
-            <a href="mailto:vardenis@pastenis.lt">vardenis@pastenis.lt</a>, quas
-            error sit consectetur aliquid iusto. Laborum eveniet laboriosam
-            veniam facere provident ipsum!
+            <a href="mailto:name@email.com">vardenis@pastenis.lt</a>, quas error
+            sit consectetur aliquid iusto. Laborum eveniet laboriosam veniam
+            facere provident ipsum!
           </p>
         </div>
       </div>
     </section>
 
     <footer class="container bg-blue">
-      <div class="row">
-        <i class="fa fa-globe"></i>
+      <div class="row socials">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-dribbble"></a>
+        <a href="#" class="fa fa-tumblr"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-rss"></a>
       </div>
-      <div class="short-row">BOTTOM TEXT</div>
+      <div class="short-row botom">BOTTOM TEXT</div>
     </footer>
   </body>
 </html>
