--- a/index.html
+++ b/index.html
@@ -87,7 +87,19 @@
         <a href="#" class="fa fa-instagram"></a>
         <a href="#" class="fa fa-rss"></a>
       </div>
-      <div class="short-row botom">BOTTOM TEXT</div>
+      <div class="short-row bottom">
+        <img class="logo-white" src="./pic/logo-white.png" alt="White logo" />
+        <div class="trio">
+          <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
+          <p>All rights reserved</p>
+          <p>Designed by <a href="#" target="_blank">TrendyThemes</a></p>
+        </div>
+        <p class="footer-description">
+          Matrox pack includes complete websites not just homepages, it comes
+          with full website demos. Over 200+ ready html files only for 17$.
+          Purchase <a href="#">Matrox</a> Now!
+        </p>
+      </div>
     </footer>
   </body>
 </html>
