--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <p class="section-description">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat
             dicta officia perferendis facilis
-            <a href="mailto:name@email.com">vardenis@pastenis.lt</a>, quas error
-            sit consectetur aliquid iusto. Laborum eveniet laboriosam veniam
-            facere provident ipsum!
+            <a href="mailto:name@email.com">name@email.com</a>, quas error sit
+            consectetur aliquid iusto. Laborum eveniet laboriosam veniam facere
+            provident ipsum!
           </p>
         </div>
       </div>
