--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- 3rd-party -->
     <link rel="stylesheet" href="./css/3d-party/font-awesome.min.css" />
     <!-- components -->
+    <link rel="stylesheet" href="./css/components/clock.css" />
     <!-- pages -->
     <link rel="stylesheet" href="./css/pages/home.css" />
   </head>
@@ -50,6 +51,30 @@
           An awesome new company for web resources is coming very soon. Enter
           your email to request an early invitation!
         </p>
+        <div class="clock">
+          <div class="time">
+            <div class="value">432</div>
+            <div class="label">Days</div>
+          </div>
+        </div>
+        <div class="clock">
+          <div class="time">
+            <div class="value">09</div>
+            <div class="label">Hours</div>
+          </div>
+        </div>
+        <div class="clock">
+          <div class="time">
+            <div class="value">37</div>
+            <div class="label">Min</div>
+          </div>
+        </div>
+        <div class="clock">
+          <div class="time">
+            <div class="value">39</div>
+            <div class="label">Sec</div>
+          </div>
+        </div>
       </div>
     </section>
 
