clock and progress bar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="./css/3d-party/font-awesome.min.css" />
     <!-- components -->
     <link rel="stylesheet" href="./css/components/clock.css" />
+    <link rel="stylesheet" href="./css/components/progress-bar.css" />
     <!-- pages -->
     <link rel="stylesheet" href="./css/pages/home.css" />
   </head>
@@ -52,29 +53,24 @@
           your email to request an early invitation!
         </p>
         <div class="clock">
-          <div class="time">
-            <div class="value">432</div>
-            <div class="label">Days</div>
+                <div class="time">
+                    <div class="value">432</div>
+                    <div class="label">Days</div>
+                </div>
+                <div class="time">
+                    <div class="value">09</div>
+                    <div class="label">Hours</div>
+                </div>
+                <div class="time">
+                    <div class="value">37</div>
+                    <div class="label">Minutes</div>
+                </div>
+                <div class="time">
+                    <div class="value">39</div>
+                    <div class="label">Seconds</div>
+                </div>
+            </div>
           </div>
-        </div>
-        <div class="clock">
-          <div class="time">
-            <div class="value">09</div>
-            <div class="label">Hours</div>
-          </div>
-        </div>
-        <div class="clock">
-          <div class="time">
-            <div class="value">37</div>
-            <div class="label">Min</div>
-          </div>
-        </div>
-        <div class="clock">
-          <div class="time">
-            <div class="value">39</div>
-            <div class="label">Sec</div>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -88,7 +84,45 @@
             quia sapiente at! Dicta, aperiam accusantium. Doloremque aut
             temporibus dignissimos expedita veritatis, unde nam?
           </p>
-        </div>
+          <div class="progress-bar-list">
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">UX Design</div>
+                            <div class="value">90%</div>
+                        </div>
+                        <div class="progress">
+                            <div class="bar bar-1"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">UX Design</div>
+                            <div class="value">80%</div>
+                        </div>
+                        <div class="progress">
+                            <div class="bar bar-2"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">UX Design</div>
+                            <div class="value">50%</div>
+                        </div>
+                        <div class="progress">
+                            <div class="bar bar-3"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">UX Design</div>
+                            <div class="value">10%</div>
+                        </div>
+                        <div class="progress">
+                            <div class="bar bar-4"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <div class="column right">
           <h2 class="section-title">Have any question?</h2>
           <p class="section-description">
