Footer style update

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
       <div class="short-row bottom">
         <img class="logo-white" src="./pic/logo-white.png" alt="White logo" />
         <div class="trio">
-          <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
-          <p>All rights reserved</p>
-          <p>Designed by <a href="#" target="_blank">TrendyThemes</a></p>
-        </div>
+                <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
+                <p>All rights reserved</p>
+                <p>Designed by <a href="#" target="_blank">TrendyTheme</a></p>
+            </div>
         <p class="footer-description">
           Matrox pack includes complete websites not just homepages, it comes
           with full website demos. Over 200+ ready html files only for 17$.
