--- a/index.html
+++ b/index.html
@@ -1,155 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coming soon</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="./favicon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-    <!-- base -->
-    <link rel="stylesheet" href="./css/base/base.css" />
-    <link rel="stylesheet" href="./css/base/layout.css" />
-    <!-- 3rd-party -->
-    <link rel="stylesheet" href="./css/3d-party/font-awesome.min.css" />
-    <!-- components -->
-    <link rel="stylesheet" href="./css/components/clock.css" />
-    <link rel="stylesheet" href="./css/components/progress-bar.css" />
-    <!-- pages -->
-    <link rel="stylesheet" href="./css/pages/home.css" />
-  </head>
 
-  <body>
-    <section class="container bg-blue">
-      <div class="short-row hero">
-        <img class="logo" src="./pic/logo.png" alt="Logo" />
-        <h1 class="main-title">Coming soon</h1>
-        <p class="main-description">
-          An awesome new company for web resources is coming very soon. Enter
-          your email to request an early invitation!
-        </p>
-        <div class="clock">
-                <div class="time">
-                    <div class="value">432</div>
-                    <div class="label">Days</div>
-                </div>
-                <div class="time">
-                    <div class="value">09</div>
-                    <div class="label">Hours</div>
-                </div>
-                <div class="time">
-                    <div class="value">37</div>
-                    <div class="label">Minutes</div>
-                </div>
-                <div class="time">
-                    <div class="value">39</div>
-                    <div class="label">Seconds</div>
-                </div>
-            </div>
-          </div>
-      </div>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Coming soon</title>
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./favicon/site.webmanifest" />
+  <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
+  <!-- base -->
+  <link rel="stylesheet" href="./css/base/base.css" />
+  <link rel="stylesheet" href="./css/base/layout.css" />
+  <!-- 3rd-party -->
+  <link rel="stylesheet" href="./css/3d-party/font-awesome.min.css" />
+  <!-- components -->
+  <link rel="stylesheet" href="./css/components/clock.css" />
+  <link rel="stylesheet" href="./css/components/progress-bar.css" />
+  <!-- pages -->
+  <link rel="stylesheet" href="./css/pages/home.css" />
+</head>
 
-    <section class="container">
-      <div class="row">
-        <div class="column">
-          <h2 class="section-title">About startup</h2>
-          <p class="section-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut sunt
-            <a href="#">Matrox</a> perferendis corrupti, sequi tenetur voluptas
-            quia sapiente at! Dicta, aperiam accusantium. Doloremque aut
-            temporibus dignissimos expedita veritatis, unde nam?
-          </p>
-          <div class="progress-bar-list">
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">UX Design</div>
-                            <div class="value">90%</div>
-                        </div>
-                        <div class="progress">
-                            <div class="bar" style="width: 90%;"></div>
-                        </div>
-                    </div>
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">Web Design</div>
-                            <div class="value">80%</div>
-                        </div>
-                        <div class="progress">
-                            <div class="bar" style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">Web Development</div>
-                            <div class="value">50%</div>
-                        </div>
-                        <div class="progress">
-                            <div class="bar" style="width: 50%;"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <div class="column right">
-          <h2 class="section-title">Have any question?</h2>
-          <p class="section-description">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat
-            dicta officia perferendis facilis
-            <a href="mailto:name@email.com">name@email.com</a>, quas error sit
-            consectetur aliquid iusto. Laborum eveniet laboriosam veniam facere
-            provident ipsum!
-          </p>
+<body>
+  <section class="container hero bg-blue">
+    <div class="short-row">
+      <img class="logo" src="./pic/logo.png" alt="Logo" />
+      <h1 class="main-title">Coming soon</h1>
+      <p class="main-description">
+        An awesome new company for web resources is coming very soon. Enter
+        your email to request an early invitation!
+      </p>
+      <div class="clock">
+        <div class="time">
+          <div class="value">432</div>
+          <div class="label">Days</div>
+        </div>
+        <div class="time">
+          <div class="value">09</div>
+          <div class="label">Hours</div>
+        </div>
+        <div class="time">
+          <div class="value">37</div>
+          <div class="label">Minutes</div>
+        </div>
+        <div class="time">
+          <div class="value">39</div>
+          <div class="label">Seconds</div>
         </div>
       </div>
-    </section>
+    </div>
+    </div>
+  </section>
 
-    <footer class="container bg-blue">
-      <div class="row socials">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-dribbble"></a>
-        <a href="#" class="fa fa-tumblr"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-rss"></a>
-      </div>
-      <div class="short-row bottom">
-        <img class="logo-white" src="./pic/logo-white.png" alt="White logo" />
-        <div class="trio">
-                <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
-                <p>All rights reserved</p>
-                <p>Designed by <a href="#" target="_blank">TrendyTheme</a></p>
+  <section class="container">
+    <div class="row">
+      <div class="column">
+        <h2 class="section-title">About startup</h2>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut sunt
+          <a href="#">Matrox</a> perferendis corrupti, sequi tenetur voluptas
+          quia sapiente at! Dicta, aperiam accusantium. Doloremque aut
+          temporibus dignissimos expedita veritatis, unde nam?
+        </p>
+        <div class="progress-bar-list">
+          <div class="progress-bar">
+            <div class="top">
+              <div class="label">UX Design</div>
+              <div class="value">90%</div>
             </div>
-        <p class="footer-description">
-          Matrox pack includes complete websites not just homepages, it comes
-          with full website demos. Over 200+ ready html files only for 17$.
-          Purchase <a href="#">Matrox</a> Now!
+            <div class="progress">
+              <div class="bar" style="width: 90%;"></div>
+            </div>
+          </div>
+          <div class="progress-bar">
+            <div class="top">
+              <div class="label">Web Design</div>
+              <div class="value">80%</div>
+            </div>
+            <div class="progress">
+              <div class="bar" style="width: 80%;"></div>
+            </div>
+          </div>
+          <div class="progress-bar">
+            <div class="top">
+              <div class="label">Web Development</div>
+              <div class="value">50%</div>
+            </div>
+            <div class="progress">
+              <div class="bar" style="width: 50%;"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column right">
+        <h2 class="section-title">Have any question?</h2>
+        <p class="section-description">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat
+          dicta officia perferendis facilis
+          <a href="mailto:name@email.com">name@email.com</a>, quas error sit
+          consectetur aliquid iusto. Laborum eveniet laboriosam veniam facere
+          provident ipsum!
         </p>
       </div>
-    </footer>
-  </body>
+    </div>
+  </section>
+
+  <footer class="container bg-blue">
+    <div class="row socials">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-dribbble"></a>
+      <a href="#" class="fa fa-tumblr"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-rss"></a>
+    </div>
+    <div class="short-row bottom">
+      <img class="logo-white" src="./pic/logo-white.png" alt="White logo" />
+      <div class="trio">
+        <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
+        <p>All rights reserved</p>
+        <p>Designed by <a href="#" target="_blank">TrendyTheme</a></p>
+      </div>
+      <p class="footer-description">
+        Matrox pack includes complete websites not just homepages, it comes
+        with full website demos. Over 200+ ready html files only for 17$.
+        Purchase <a href="#">Matrox</a> Now!
+      </p>
+    </div>
+  </footer>
+</body>
+
 </html>
