--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- components -->
   <link rel="stylesheet" href="./css/components/clock.css" />
   <link rel="stylesheet" href="./css/components/progress-bar.css" />
+  <link rel="stylesheet" href="./css/components/mouse.css">
   <!-- pages -->
   <link rel="stylesheet" href="./css/pages/home.css" />
 </head>
@@ -54,6 +55,7 @@
         </div>
       </div>
     </div>
+    <div class="mouse"></div>
     </div>
   </section>
 
@@ -111,29 +113,31 @@
   </section>
 
   <footer class="container bg-blue">
-    <div class="row socials">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-dribbble"></a>
-      <a href="#" class="fa fa-tumblr"></a>
-      <a href="#" class="fa fa-linkedin"></a>
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-rss"></a>
+    <div class="row">
+      <div class="socials">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-dribbble"></a>
+        <a href="#" class="fa fa-tumblr"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-rss"></a>
+      </div>
+      <a href="#" class="back-to-top fa fa-angle-up"></a>
     </div>
     <div class="short-row bottom">
-      <img class="logo-white" src="./pic/logo-white.png" alt="White logo" />
+      <img class="logo" src="./pic/logo-white.png" alt="Logo">
       <div class="trio">
         <p>Copyright &copy; 2022 <a href="#">Matrox</a></p>
         <p>All rights reserved</p>
         <p>Designed by <a href="#" target="_blank">TrendyTheme</a></p>
       </div>
-      <p class="footer-description">
-        Matrox pack includes complete websites not just homepages, it comes
-        with full website demos. Over 200+ ready html files only for 17$.
-        Purchase <a href="#">Matrox</a> Now!
-      </p>
+      <p class="footer-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia repellendus quae
+        praesentium, dolorum earum sed beatae. Impedit laborum ab itaque ea et facilis cum, exercitationem fugit ipsum,
+        necessitatibus dolores cupiditate.</p>
     </div>
   </footer>
+
 </body>
 
 </html>
