--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
 <body>
   <section class="container hero bg-blue">
     <div class="short-row">
-      <img class="logo" src="./pic/logo.png" alt="Logo" />
+      <img class="logo" src="./pic/logo.png" alt="Logo">
       <h1 class="main-title">Coming soon</h1>
-      <p class="main-description">
-        An awesome new company for web resources is coming very soon. Enter
-        your email to request an early invitation!
-      </p>
+      <p class="main-description">An awesome new company for web resources is coming very soon. Enter your email to
+        request an early invitation!</p>
       <div class="clock">
         <div class="time">
           <div class="value">432</div>
@@ -54,8 +52,7 @@
           <div class="label">Seconds</div>
         </div>
       </div>
-    </div>
-    <div class="mouse"></div>
+      <div class="mouse"></div>
     </div>
   </section>
 
