--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <section class="container hero bg-blue">
     <div class="short-row">
-      <img class="logo" src="./pic/logo.png" alt="Logo">
+      <img class="logo" src="./img/logo.png" alt="Logo">
       <h1 class="main-title">Coming soon</h1>
       <p class="main-description">An awesome new company for web resources is coming very soon. Enter your email to
         request an early invitation!</p>
