--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           <div class="label">Seconds</div>
         </div>
       </div>
+      <form action="/">
+        <div class="subscribe">
+          <label for="Email">Email</label>
+          <input id="email" name="email" type="email" placeholder="Type Your Email" required>
+        </div>
+        <div><button class="btn">Subscibe Now</button>
+        </div>
+      </form>
+
       <div class="mouse"></div>
     </div>
   </section>
