Final subscribe form update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="label">Seconds</div>
         </div>
       </div>
-      <form action="/">
+      <form class="hero-form" action="/">
         <div class="subscribe">
           <label for="Email">Email</label>
           <input id="email" name="email" type="email" placeholder="Type Your Email" required>
